<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/jetdevs"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/size_extra_large_text" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:background="@drawable/bg_edit_text_rounded_corners"
        android:hint="@string/prompt_email"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textSize="@dimen/size_input_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:background="@drawable/bg_edit_text_rounded_corners"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textSize="@dimen/size_input_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:background="@drawable/bg_button_rounded_corners"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="@dimen/size_button_text" />


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</LinearLayout>